--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.9",
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-highlight-words": "^0.16.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "antd": "^3.25.2",
@@ -16,6 +17,7 @@
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-highlight-words": "^0.16.0",
     "react-intl": "^3.6.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
