--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.4",
     "@types/react-highlight-words": "^0.16.0",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.2",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
@@ -21,6 +22,7 @@
     "react-intl": "^3.6.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-saga": "^0.3.1",
     "react-scripts": "3.2.0",
