--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-saga": "^0.3.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2"
