--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-highlight-words": "^0.16.0",
+    "@types/react-loadable": "^5.5.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.2",
