--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.10.3",
     "@types/jest": "24.0.23",
+    "@types/loadable__component": "^5.10.0",
     "@types/node": "12.12.9",
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.4",
@@ -20,7 +22,6 @@
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^3.6.0",
-    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-saga": "^0.3.1",
