--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-loadable": "^5.5.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/recompose": "^0.30.7",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-saga": "^0.3.1",
     "react-scripts": "3.2.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
