--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.9.1",
+    "firebase": "^7.5.0",
     "p-min-delay": "^3.1.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
