--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-loadable": "^5.5.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-sticky": "^6.0.3",
     "@types/recompose": "^0.30.7",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
