--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
